sliders added
